# Poly_ALEX

./: CMakeLists.txt
src/core/: alex.h  alex_base.h  alex_fanout_tree.h  alex_nodes.h
src/examples/: main.cpp
test/: unittest_alex.h  unittest_main.cpp  unittest_nodes.h
